--- a/_sass/base/_base.sass
+++ b/_sass/base/_base.sass
@@ -43,7 +43,7 @@ body {
     env(safe-area-inset-bottom) env(safe-area-inset-left);
   color: var(--text-color);
   -webkit-font-smoothing: antialiased;
-  font-family: v.$font-family-base;
+  font-family: "Times New Roman", Times, serif;
 }
 
 h1.dynamic-title {
